# Wordle-with-Solver

./: .gitignore  LICENSE  README.md  main.c  main_all.c  makefile  player.h  test  test.c  wordle  wordle-tree-formatter.py  wordle.c  wordlist.c
JOJ part/: checkWord.c
final/: CMakeLists.txt  README.md  main.c  players.c  wordle  wordle.c  wordle.h  wordlist.c
final2/: checkWord.c  wordle.h
new_try/: main.c  players.c  wordle.c  wordle.h  wordlist.c
part1/: wordle.h
part2/: README.md  main.c  wordle  wordle.c  wordle_solver.c  wordle_solver.h
part2_2/: wordle_solver.c
pat1/: players.c
pre_version/: README.md  wordle.h
release-v1.0.0/: main_plus.c  player.c  tree_l.txt  wordle-tree-formatter.py
test/: main.c  main1.c  player.c  player.h  wordle-tree-formatter.py  wordle.c  wordle.h
test_final/: player.c  wordle.h
test_version/: README.md  player.c
v0.0.0/: wordle.h
v1.0.0/: README.md  graph.py  main.c  main_all.c  main_plus.c  player.c  player.h  tree_u.txt  wordle.c
